Core/App: Add basic support for the CHIP-8, CHIP-48, SUPER-CHIP 1.0, SUPER-CHIP 1.1 and SUPER-CHIP MODERN interpreter cores