@@ -1,19 +1,11 @@
 package io.github.arkosammy12.jemu.core.exceptions;
 
+import io.github.arkosammy12.jemu.core.common.Emulator;
+
 public class InvalidInstructionException extends EmulatorException {
 
-    public InvalidInstructionException(int firstByte, int secondByte, String systemDisplayName) {
-        super("Instruction "
-                + String.format("%04X", ((firstByte << 8) | secondByte))
-                + " is invalid on the "
-                + systemDisplayName + " system!");
-    }
-
-    public InvalidInstructionException(int opcode, String systemName) {
-        super("Instruction "
-                + String.format("%02X", opcode)
-                + " is invalid on the "
-                + systemName + " system!");
+    public InvalidInstructionException(int opcode, Emulator emulator) {
+        super("Instruction opcode " + "$%02X".formatted(opcode) + " is invalid on the " + emulator.getHost().getSystemName() + " system!");
     }
 
 }
